# api/handler/apikey.go
@@ -36,8 +36,6 @@ func NewApikey(service service.Apikey) Apikey {
 // @Tags Apikey
 // @Accept json
 // @Produce json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param Authorization header string true "Authorization"
 // @Param type query string false "Type of API key (public or secret)"
 // @Param platformId query string false "Platform ID"
@@ -83,8 +81,6 @@ func (a apikey) Create(c echo.Context) error {
 // @Tags Apikey
 // @Accept json
 // @Produce json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param platformId query string false "Platform ID"
 // @Param limit query int false "Limit the number of returned results"
 // @Param offset query int false "Offset the starting point of returned results"
@@ -135,8 +131,6 @@ func (a apikey) GetAll(c echo.Context) error {
 // @Tags Apikey
 // @Accept json
 // @Produce json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param id path string true "API Key ID"
 // @Success 200 {object} model.Apikey
 // @Router /apikeys/{id} [get]
@@ -169,8 +163,6 @@ func (a apikey) Get(c echo.Context) error {
 // @Tags Apikey
 // @Accept json
 // @Produce json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param id path string true "API Key ID"
 // @Success 204 "No Content"
 // @Router /apikeys/{id} [delete]
@@ -204,8 +196,6 @@ func (a apikey) Delete(c echo.Context) error {
 // @Tags Apikey
 // @Accept json
 // @Produce json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param id path string true "API Key ID"
 // @Param description body string false "API key description"
 // @Success 200 {object} model.Apikey
