# api/handler/invite.go
@@ -38,8 +38,6 @@ func NewInvite(service service.Invite) Invite {
 // @Tags Invite
 // @Accept  json
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param memberId header string true "Member ID"
 // @Param organizationId header string true "Organization ID"
 // @Param RequestInviteSend body model.RequestInviteSend true "Invite Send Request"
@@ -83,8 +81,6 @@ func (i invite) Send(c echo.Context) error {
 // @Tags Invite
 // @Accept  json
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param id path string true "Invite ID"
 // @Param RequestInviteAcceptance body model.RequestInviteAcceptance true "Invite Acceptance Request"
 // @Success 200 {object} model.OrganizationMember
@@ -137,8 +133,6 @@ func (i invite) Accept(c echo.Context) error {
 // @Summary List invites
 // @Tags Invite
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param organizationId header string true "Organization ID"
 // @Param status query string false "Invite status"
 // @Success 200 {array} repository.MemberInviteInfo
@@ -164,8 +158,6 @@ func (i invite) List(c echo.Context) error {
 // @Summary Resend an invite
 // @Tags Invite
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param memberId header string true "Member ID"
 // @Param id path string true "Invite ID"
 // @Success 200 {object} repository.MemberInviteInfo
@@ -200,8 +192,6 @@ func (i invite) Resend(c echo.Context) error {
 // @Tags Invite
 // @Accept  json
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param memberId header string true "Member ID"
 // @Param id path string true "Invite ID"
 // @Param RequestInviteUpdate body model.RequestInviteUpdate true "Invite Update Request"
@@ -252,8 +242,6 @@ func (i invite) Update(c echo.Context) error {
 // @Summary Revoke an invite
 // @Tags Invite
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param memberId header string true "Member ID"
 // @Param id path string true "Invite ID"
 // @Success 200 {object} map[string]string
@@ -291,8 +279,6 @@ func (i invite) Revoke(c echo.Context) error {
 // @Summary Get an invite
 // @Tags Invite
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param id path string true "Invite ID"
 // @Success 200 {object} repository.MemberInviteInfo
 // @Failure 400 {object} httperror.HTTPError
