# api/handler/network.go
@@ -25,8 +25,6 @@ func NewNetwork(service service.Network) Network {
 // @Summary Get all networks
 // @Tags Network
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Success 200 {array} model.NetworkData
 // @Failure 500 {object} httperror.HTTPError
 // @Router /networks [get]
