# api/handler/organization.go
@@ -89,8 +89,6 @@ func (o organization) Get(c echo.Context) error {
 // @Tags Organization
 // @Accept  json
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param body body model.RequestOrganizationUpdate true "Organization Update Request"
 // @Success 200 {object} model.Organization
 // @Failure 400 {object} httperror.HTTPError
