# api/handler/platform.go
@@ -31,8 +31,6 @@ func NewPlatform(service service.Platform) Platform {
 // @Tags Platform
 // @Accept  json
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param body body model.RequestPlatformCreate true "Platform Create Request"
 // @Success 201 {object} model.Platform
 // @Failure 400 {object} httperror.HTTPError
@@ -66,8 +64,6 @@ func (p platform) Create(c echo.Context) error {
 // @Summary Get platform
 // @Tags Platform
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param id path string true "Platform ID"
 // @Success 200 {object} model.Platform
 // @Failure 400 {object} httperror.HTTPError
@@ -95,8 +91,6 @@ func (p platform) Get(c echo.Context) error {
 // @Summary Get all platforms
 // @Tags Platform
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Success 200 {array} model.Platform
 // @Failure 500 {object} httperror.HTTPError
 // @Router /platforms [get]
@@ -123,8 +117,6 @@ func (p platform) GetAll(c echo.Context) error {
 // @Tags Platform
 // @Accept  json
 // @Produce  json
-// @Security JWTAuth
-// @Security BearerAuth
 // @Param id path string true "Platform ID"
 // @Param body body model.RequestPlatformUpdate true "Platform Update Request"
 // @Success 200 {object} model.Platform
